[project]
version = "1.0.0"
name = "influxdb-cli"
description = "InfluxDB Client Library for Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml==6.0.3",
    "platformdirs==4.5.1",
    "typer==0.20.0",
    "pydantic==2.12.5",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "influxdb==5.3.2",
]
[project.scripts]
influx = "influxdb_cli.main:app"
